package S191220144.task2;

public interface Sorter {

    public void load(int[] elements);
    public void sort();
    public String getPlan();
    
}
